// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-34tpg8"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-103ded3"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item wp-components-flex-block css-1axj847"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="wp-components-flex-item css-1bebqpp"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-awstxh"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-1na9mn3"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1bebqpp"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-34tpg8"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-1na9mn3"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1bebqpp"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack wp-components-v-stack css-34tpg8"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="wp-components-flex-item css-103ded3"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-1bebqpp"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1ihlkjd"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;
